--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- <script src="assets/scripts/script.js" defer></script> -->
     <!-- <script src="assets/scripts/dynamicProperty.js" defer></script> -->
     <script src="assets/scripts/objects.js" defer></script>
+    <!-- <script src="assets/scripts/spreadOperator.js" defer></script> -->
+    <!-- <script src="assets/scripts/objectAssign.js" defer></script> -->
   </head>
   <body>
     <section id="user-input" class="card">
